log/build_2025-07-21_15-49-17/camera_interface/stderr.log
  File "/home/asu/ika_ws/install/camera_interface/lib/python3.10/site-packages/camera_interface/camera_node.py", line 132
    px = int(center + x * (size / (max_range * 2))))
                                                   ^
SyntaxError: unmatched ')'

